[package]
name = "unsegen_pager"
version = "0.1.0"
authors = ["ftilde <ftilde@protonmail.com>"]

description = "An unsegen widget for viewing files with additional features"
documentation = "https://docs.rs/unsegen_terminal"
repository = "https://github.com/ftilde/unsegen_pager"
readme = "README.md"
license-file = "LICENSE"
keywords = ["terminal", "tui", "pager"]

[dependencies]
syntect = "2.0"

[dependencies.unsegen]
#git = "https://github.com/ftilde/unsegen"
#path = "../unsegen"
version = "0.0.1"
