[package]
name = "unsegen_pager"
version = "0.1.2"
authors = ["ftilde <ftilde@protonmail.com>"]

description = "An unsegen widget for viewing files with additional features"
documentation = "https://docs.rs/unsegen_pager"
repository = "https://github.com/ftilde/unsegen_pager"
readme = "README.md"
license = "MIT"
keywords = ["terminal", "tui", "pager"]

[dependencies]
syntect = "2.0"
unsegen = "0.1"
